# LeapAsl

./: CMakeLists.txt
analyzer/: CMakeLists.txt  levhenstein_distance.h  main.cpp
cmake/Modules/: FindKenLM.cmake  FindLeap.cmake  Findmlpack.cmake
data/: lexicon.sample  romeo_and_juliet_alpha.txt  romeo_and_juliet_corpus.mmap  romeo_and_juliet_dialog.txt  romeo_and_juliet_lines.txt
data/collected/: all.lexicon  charlotte.lexicon  lane.lexicon  sophie.lexicon
demo/: CMakeLists.txt  aspell_en_expanded  main.cpp  respacer.h  romeo_and_juliet_corpus.arpa
lexicographer/: CMakeLists.txt  main.cpp
lexicon_to_model/: CMakeLists.txt  main.cpp
lexicon_to_points/: CMakeLists.txt  main.cpp
lib/: Analyzer.cpp  CMakeLists.txt  Database.cpp  Gestures.cpp  Lexicon.cpp  Listener.cpp  NormalizedHandTransform.cpp  Pose.cpp  Poses.cpp  Predictors.cpp  Recognizer.cpp  RecordPlayer.cpp  Recorder.cpp  Trainer.cpp  Utility.cpp
lib/include/LeapAsl/: Analyzer.h  Database.h  Labels.h  LeapAsl.h  Lexicon.h  Predictors.h  Recognizer.h  RecordPlayer.h  Recorder.h  Utility.h
lib/include/LeapLearnedGestures/: Analyzer.h  Database.h  LearnedGestures.h  Listener.h  NormalizedHandTransform.h  Recognizer.h  Trainer.h  Utility.h
lib/include/LeapLearnedGestures/detail/: Gestures.h  Pose.h  Poses.h
recorder/: CMakeLists.txt  main.cpp
transcriber/: CMakeLists.txt  gestures.sample  lexicon.sample  main.cpp  romeo_and_juliet_corpus.mmap  romeo_and_juliet_corpus.txt
